@@ -46,4 +46,5 @@ reading=reading __1__
 scanning=scanning
 disabled=disabled
 read-grid=Read equipment grid (if present)
+provide-virtual-signals=Generate virtual signals
 migration=Migrated __1__ Inventory Sensors on __2__ (__3__).
